Fix formatting of main and aside elements

--- a/0x00-html_advanced/article.html
+++ b/0x00-html_advanced/article.html
@@ -13,9 +13,9 @@
     <!-- Header -->
     <header>Header</header>
     <!---main-->
-    <main>Main content</main>
-    <!---aside-->
-    <aside>Aside</aside>
+    <main>Main content
+        <aside>Aside</aside>
+    </main>
     <!---footer-->
     <footer>Footer</footer>
 </body>
